fix: get image for category
